--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -66,7 +66,6 @@ body {
 
 .content {
     width: 100%;
-    font-size: 1.5rem;
 
     padding: 50px;
     background: white;
@@ -74,6 +73,10 @@ body {
     justify-content: center;
     align-items: center;
     gap: 20px;
+}
+.content p{
+    font-size: 25px;
+    color: black;
 }
 
 .content .col-left {
