--- a/src/assets/css/MenuCard.css
+++ b/src/assets/css/MenuCard.css
@@ -194,10 +194,14 @@
     flex-wrap: wrap;
   }
   .card-menu{
-    border: 1px solid red ;
+    border: 1px solid white ;
     width: 275px;
     padding: 10px;
     margin: 15px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+border-radius: 20px;
+
+
   }
   .card-menu img{
     width: 300px;
@@ -248,43 +252,67 @@
     background-color: #e03e00;
   }
   .review-section {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    margin: 30px 0;
+    width: 100%;
+    padding: 20px;
   }
   
   .review-card {
+    background: #f9f9f9;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
-    width: 100%;
-    border: 1px solid #ccc;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    justify-content: space-between;
+    height: 130px;
   }
   
   .review-content {
-    width: 50%;
-    padding: 20px;
-    background-color: #fff8f0;
-  }
-  
-  .review-content h3 {
-    margin-bottom: 10px;
-    color: #cc6600;
+    flex: 0 0 60%; 
+    padding-right: 15px; 
   }
   
   .review-image {
-    width: 50%;
+    flex: 0 0 40%; 
     display: flex;
-    align-items: center;
     justify-content: center;
-    background-color: #fff;
+    align-items: center;
   }
   
   .review-image img {
-    max-width: 100%;
+    width: 80%; 
     height: auto;
-    object-fit: cover;
+    border-radius: 50%;
   }
   
+  h3 {
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  p {
+    font-size: 14px;
+    color: #555;
+  }
+  .btn-oder, .btn-add {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 14px;
+  }
+  
+  .btn-oder {
+    background-color: #ff5a5f;
+    color: white;
+    margin-right: 10px;
+  }
+  
+  .btn-add {
+    background-color: #00b894;
+    color: white;
+  }
+  .btn-wrapper{
+    gap: 12px;
+    margin-top: 10px;
+  }
