--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -10,8 +10,7 @@ body {
   .menu li.introduce:hover{
     background-color: rgba(0, 0, 0, 0.1);
   }
-  .menu li a:hover {
-  }
+ 
   .menu li a{
     width: 100%;
     display: block; /* hoặc inline-block nếu muốn giữ trên 1 dòng */
@@ -76,9 +75,9 @@ body {
     width: 30%;
     display: flex;
     justify-content: center;
-    height: 250px;
-    margin-top: 60px;
+    height: auto;
     padding-right: 30px;
+    align-items: center;
   }
   
   .menu-image img {
